# tech-radar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tech_radar/: __init__.py  cli.py  client.py  models.py  output.py
src/tech_radar/sources/: __init__.py  github_trending.py  hackernews.py
tests/: test_github_trending_parser.py  test_models.py
